# DeskFlow-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  run_agent.py
deskflow_agent/: config.py  graph.py  llm.py  state.py
deskflow_agent/nodes/: approval_node.py  classifier_node.py  escalation_node.py  logger_node.py  rag_node.py  resolver_node.py  router_node.py
deskflow_agent/prompts/: classifier_prompt.py  onboarding_tools_map.py  resolver_prompt.py
deskflow_agent/rag/: chroma_client.py  embedder.py  retriever.py  seed_data.py
deskflow_agent/tools/: github_tool.py  mock_tools.py  tool_registry.py
tests/: test_classifier.py  test_graph.py  test_rag.py  test_router.py
